fix: skeleton inline gap

--- a/packages/react-components/src/components/skeleton/skeleton.module.css
+++ b/packages/react-components/src/components/skeleton/skeleton.module.css
@@ -14,6 +14,10 @@
     position: relative;
     overflow: hidden;
 
+    & + & {
+      margin-left: var(--gap, 0);
+    }
+
     & + br + & {
       margin-top: var(--gap, 0);
     }
